# strawberry-frozen-example

./: README.md  main.py  pyproject.toml
